--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,12 +23,12 @@
   },
   "background": {
     "scripts": [
-      "background.js"
+      "background/index.js"
     ],
     "persistent": true
   },
   "options_ui": {
-    "page": "options.html",
+    "page": "options/index.js",
     "open_in_tab": true
   }
 }
